--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -10,5 +10,5 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.github.url | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.github.url | prepend: site.url }}" />
-  <link rel="stylesheet" href={{ "css/main.css" | relative_url }}
+  <link href="{{site.github.url}}/css/main.css" rel="stylesheet">
 </head>
